--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,21 +3,18 @@
     <div class="row">
       <div class="col col-12">
         <div class="header-box">
-          <div class="logo-title">
-            <a href="{{site.baseurl}}/" class="logo-text">Galada</a>
-          </div>
-
           <nav class="nav-menu">
             <i class="menu-close ion ion-ios-close"></i>
             <ul class="menu-list">
               <li class="menu-item"><a href="{{site.baseurl}}/" class="menu-link">Home</a></li>
               {% for page in site.pages %}
-                {% unless page.name == 'tags.html' or page.name == '404.html' %}
+                {% unless page.name == 'tags.html' or page.name == '404.html' or page.name == 'styleguide.md'%}
               {% if page.title %}
               <li class="menu-item"><a href="{{ page.url | prepend: site.baseurl }}" class="menu-link">{{ page.title }}</a></li>
               {% endif %}
                 {% endunless %}
               {% endfor %}
+              <li class="menu-item"><a href="https://riley-knox.github.io/misc/riley_resume.pdf" target="_blank" class="menu-link">Resume</a></li>
             </ul>
           </nav>
           <div class="nav-buttons">
