--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,6 +1,7 @@
 <aside class="sidebar">
-  
-  {% if page.id %}
+
+<!-- "Recent Posts" Widget-->
+  <!-- {% if page.id %}
   <div class="widget widget-recent">
     <h3 class="widget-title">Recent Posts</h3>
     {% for post in site.posts limit:4 %}
@@ -21,12 +22,12 @@
     {% endfor %}
   </div>
   {% else %}
-  {% endif %}
+  {% endif %} -->
 
   <div class="widget widget-social">
-    <h3 class="widget-title">Subscribe & Follow</h3>
+    <h3 class="widget-title">Contact</h3>
     <ul class="social-profiles list-reset">
-      {% if site.facebook %}
+      <!-- {% if site.facebook %}
       <li class="social-profiles-item">
         <a href="{{ site.facebook }}" class="social-profiles-link"><i class="ion ion-logo-facebook"></i></a>
       </li>
@@ -48,25 +49,24 @@
       <li class="social-profiles-item">
         <a href="{{ site.pinterest }}" class="social-profiles-link"><i class="ion ion-logo-pinterest"></i></a>
       </li>
-      {% else %} {% endif %}
-    </ul>
-  </div>
+      {% else %} {% endif %} -->
 
-  <div class="widget widget-newsletter">
-    <h3 class="widget-title">Newsletter</h3>
-    <div class="newsletter-subtitle">Get Interesting News</div>
-    <div class="newsletter-text">Receive the latest news via email.</div>
-    <form class="c-newsletter-form validate" action="{% if site.mailchimp %}//{{site.mailchimp}}{% else %}#{% endif %}" method="POST"
-      id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" target="_blank" novalidate>
-      <div class="newsletter-group">
-        <div class="newsletter-group-top">
-          <label class="screen-reader-text" for="mce-EMAIL">Email address</label>
-          <i class="email-icon ion ion-ios-mail"></i>
-          <input class="newsletter-email required email" id="mce-EMAIL" type="text" name="EMAIL" placeholder="E-mail">
-        </div>
-        <input class="newsletter-button" id="mc-embedded-subscribe" type="submit" name="subscribe" value="Subscribe">
-      </div>
-    </form>
+      {% if site.linkedin %}
+      <li class="social-profiles-item">
+        <a href="{{ site.linkedin }}" class="social-profiles-link"><i class="ion ion-logo-linkedin"></i></a>
+      </li>
+      {% else %} {% endif %}
+
+      {% if site.github %}
+      <li class="social-profiles-item">
+        <a href="{{ site.github }}" class="social-profiles-link"><i class="ion ion-logo-github"></i></a>
+      </li>
+      {% else %} {% endif %}
+
+      <li class="social-profiles-item">
+        <a href="{{ site.email }}" class="social-profiles-link"><i class="ion ion-md-mail"></i></a>
+      </li>
+    </ul>
   </div>
 
   {% if site.instafeed == true %}
@@ -80,7 +80,7 @@
   {% endif %}
 
   <div class="widget widget-tags">
-    <h3 class="widget-title">Tag Cloud</h3>
+    <h3 class="widget-title">Project Topics</h3>
     {% capture site_tags %}{% for tag in site.tags %}{{ tag | first }}{% unless forloop.last %},{% endunless %}{% endfor %}{%
     endcapture %} {% assign tag_words = site_tags | split:',' | sort %}
     <ul class="tag-list list-reset">
@@ -91,5 +91,5 @@
     {% endfor %}
     </ul>
   </div>
-  
+
 </aside> <!-- /.sidebar -->
