--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,7 +1,8 @@
 ---
 layout: default
 ---
-<div class="container">
+<!-- Leading image -->
+<!-- <div class="container">
 	<div class="row">
 		<div class="col col-12">
 			<div class="post-image-box">
@@ -9,7 +10,7 @@ layout: default
 			</div>
 		</div>
 	</div>
-</div>
+</div> -->
 
 <div class="container">
 	<div class="row">
@@ -25,7 +26,7 @@ layout: default
 					</div>
 					{% endif %}
 					<h1 class="post-title">{{ page.title | escape }}</h1>
-					<div class="post-info">
+					<!-- <div class="post-info">
 						<div class="post-info-author">
 							<div class="info-author-avatar" style="background-image: url({{"/img/" | prepend: site.baseurl | append : site.author-avatar}})"></div>
 							<span>by</span>
@@ -36,13 +37,14 @@ layout: default
 								<time datetime="{{ page.date | date_to_xmlschema }}">{{page.date | date: '%b %d, %Y'}}</time>
 							</span>
 						</div>
-					</div>
+					</div> -->
 				</div>
 
 				<div class="post-body">
 					{{ content }}
 
-					<div class="post-share">
+					<!-- Social Media -->
+					<!-- <div class="post-share">
 						<ul class="share-list list-reset">
 							<li class="share-item">
 								<a class="share-facebook" href="https://www.facebook.com/sharer/sharer.php?u={{ site.url }}{{ site.baseurl }}{{ page.url }}"
@@ -51,7 +53,7 @@ layout: default
 									<i class="ion ion-logo-facebook"></i>
 								</a>
 							</li>
-					
+
 							<li class="share-item">
 								<a class="share-twitter" href="https://twitter.com/intent/tweet?text={{ page.title | uri_escape }}&url={{ site.url }}{{ site.baseurl }}{{ page.url }}"
 								onclick="window.open(this.href, 'pop-up', 'left=20,top=20,width=500,height=500,toolbar=1,resizable=0'); return false;"
@@ -59,7 +61,7 @@ layout: default
 									<i class="ion ion-logo-twitter"></i>
 								</a>
 							</li>
-					
+
 							<li class="share-item">
 								<a class="share-linkedin" href="https://www.linkedin.com/shareArticle?mini=true&url={{ site.url }}{{ site.baseurl }}{{ page.url }}&title={{ page.title | uri_escape }}&summary={{ page.description | uri_escape }}&source={{ site.title | uri_escape }}"
 								onclick="window.open(this.href, 'pop-up', 'left=20,top=20,width=500,height=500,toolbar=1,resizable=0'); return false;"
@@ -67,7 +69,7 @@ layout: default
 									<i class="ion ion-logo-linkedin"></i>
 								</a>
 							</li>
-					
+
 							<li class="share-item">
 								<a class="share-pinterest" href="http://pinterest.com/pin/create/button/?url={{ site.url }}{{ page.url }}&amp;media={{ site.url }}{{ site.baseurl }}/img/{{ page.image }}&amp;description={{ page.title | uri_escape }}"
 								onclick="window.open(this.href, 'pop-up', 'left=20,top=20,width=900,height=500,toolbar=1,resizable=0'); return false;"
@@ -76,10 +78,11 @@ layout: default
 								</a>
 							</li>
 						</ul>
-					</div>
+					</div> -->
 				</div>
 
-				<div class="post-navigation">
+				<!-- Navigation -->
+				<!-- <div class="post-navigation">
 					{% if page.previous.url %}
 					<a href="{{ site.baseurl }}{{page.previous.url}}" class="prev">
 						<div class="post-nav-arrow"><i class="ion ion-ios-arrow-round-back"></i> Previous Article</div>
@@ -91,12 +94,12 @@ layout: default
 						<h2 class="post-nav-title">{{page.next.title}}</h2>
 					</a>
 					{% endif %}
-				</div>
+				</div> -->
 
 			</div>
-			{% if site.disqus-identifier %}
-				{% include disqus-comments.html %}
-			{% endif %}
+			<!-- {% if site.disqus-identifier %} -->
+				<!-- {% include disqus-comments.html %}
+			<!-- {% endif %} -->
 	</article> <!-- /.post -->
 
 	<div class="col col-12 col-t-4">
