Revert "yoink and twist"
This reverts commit 9e7438eb5d000d91584c671d438ed961e4f0049c.

--- a/_sass/3-modules/_sidebar.scss
+++ b/_sass/3-modules/_sidebar.scss
@@ -115,15 +115,15 @@
     display: inline-block;
     line-height: 16px;
     padding: 8px 10px;
-    border: 1px solid $text;
+    border: 1px solid $border-color;
     border-radius: $global-radius;
-    color: $text;
+    color: $border-color;
     &:hover {
       border-color: $primary-color;
       color: $primary-color;
     }
     i {
-      font-size: 36px;
+      font-size: 18px;
     }
   }
 }
