changed color scheme

--- a/_sass/0-settings/_colors.scss
+++ b/_sass/0-settings/_colors.scss
@@ -1,5 +1,5 @@
 // Main Colors
-$primary-color: #1ABC9C;
+$primary-color: #EBA231;
 $secondary-color: #C19CD8;
 $highlight: #ffeea8;
 $text: #C9D3E7;
@@ -21,7 +21,7 @@ $background: $blue-black;
 $body-color: $text;
 
 // Headings
-$heading-font-color: #404040;
+$heading-font-color: #d50606;
 
 // Links
 $link-color: $primary-color;
