--- a/_sass/0-settings/_colors.scss
+++ b/_sass/0-settings/_colors.scss
@@ -1,5 +1,5 @@
 // Main Colors
-$primary-color: #EBA231;
+$primary-color: #ed6500;
 $secondary-color: #C19CD8;
 $highlight: #ffeea8;
 $text: #C9D3E7;
