--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,6 +18,7 @@
   <!-- Ionicons -->
   <link href="https://unpkg.com/ionicons@4.2.2/dist/css/ionicons.min.css" rel="stylesheet">
 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/3.2.0/es5/tex-mml-chtml.min.js" integrity="sha384-En/9MkZatWQV2XgR0j5BNU3SXSmRb8+uvtlJ7l5ha0v0xF5lJfjOj7C/NoJZjUaO" crossorigin="anonymous"></script>
 
 
   <style>
