some more hacks to fix it?

--- a/_sass/2-base/_base.scss
+++ b/_sass/2-base/_base.scss
@@ -216,3 +216,8 @@ table tr:hover {
   word-wrap: break-word; 
   overflow-wrap: break-word; 
 }
+
+p, div { 
+  word-wrap: break-word; 
+  overflow-wrap: break-word; 
+}
