--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
       <div class="col col-12">
         <div class="footer-bottom">
           <div class="copyright">
-            <p>&copy; {{site.time | date: '%Y'}} by Ashwath Karthikeyan</p>
+            <p>&copy; {{site.time | date: '%Y'}} Ashwath Karthikeyan. Powered by Jekyll. </p>
           </div>
           <div class="footer-social">
             <ul class="list-reset">
@@ -39,7 +39,7 @@
         </div>
         <div class="footer-top">
           <h2 class="logo-title">
-            <a href="{{site.baseurl}}/" class="logo-text">Galada</a>
+            <a href="https://galada.netlify.app/" class="logo-text">Galada</a>
           </h2>
           <div class="top"><i class="ion ion-ios-arrow-up"></i></div>
         </div>
