--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
 
 <body>
 
-  {% if site.google-analytics %}
+  {% if site.google_analytics %}
     {% include google-analytics.html %}
   {% endif %}
   {% include loader.html %}
