Revert "fix dates"
This reverts commit ed5efd78e7b003dd257bbaeda45c8224bf01b0bb.

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -34,7 +34,7 @@ layout: default
 						</div> -->
 						<div class="post-date">
 							<span>
-								<!-- <time datetime="{{ page.date | date_to_xmlschema }}">{{page.date | date: '%b %d, %Y'}}</time> -->
+								<time datetime="{{ page.date | date_to_xmlschema }}">{{page.date | date: '%b %d, %Y'}}</time>
 							</span>
 						</div>
 					</div>
